--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -1,3 +1,4 @@
+<!-- src/app/user-login-form/user-login-form.component.html -->
 <mat-card>
   <mat-card-header>
     <mat-card-title>Login</mat-card-title>
@@ -11,7 +12,8 @@
           placeholder="Username"
           type="text"
           name="Username"
-          required>
+          required
+        >
       </mat-form-field>
       <mat-form-field>
         <input
@@ -20,7 +22,8 @@
           type="password"
           placeholder="Password"
           name="Password"
-          required>
+          required
+        >
       </mat-form-field>
     </form>
   </mat-card-content>
@@ -28,14 +31,9 @@
     <button
       mat-raised-button
       (click)="loginUser()"
-      color="primary">
+      color="primary"
+    >
       Login
-    </button>
-    <button
-      mat-raised-button
-      mat-dialog-close
-      color="primary">
-      Cancel
     </button>
   </mat-card-actions>
 </mat-card>
