--- a/src/app/welcome-page/welcome-page.component.scss
+++ b/src/app/welcome-page/welcome-page.component.scss
@@ -14,7 +14,14 @@
   text-align: center;
 }
 
+.button-container {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+}
+
 .main-page button {
-  margin: 0 10px;
+  margin: 0;
   min-width: 120px;
 }
