--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -5,53 +5,53 @@
   <mat-card-content>
     <form>
       <mat-form-field>
+        <mat-label>Username</mat-label>
         <input
           matInput
           [(ngModel)]="userData.Username"
-          placeholder="Username"
           type="text"
           name="Username"
           required
         >
-        </mat-form-field>
-        <mat-form-field>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Password</mat-label>
         <input
           matInput
           [(ngModel)]="userData.Password"
-          type = "password"
-          placeholder="Password"
+          type="password"
           name="Password"
           required
         >
       </mat-form-field>
       <mat-form-field>
+        <mat-label>Email</mat-label>
         <input
           matInput
           [(ngModel)]="userData.Email"
-          type = "email"
-          placeholder="Email"
+          type="email"
           name="Email"
           required
         >
       </mat-form-field>
       <mat-form-field>
+        <mat-label>Birthday</mat-label>
         <input
           matInput
           [(ngModel)]="userData.Birthday"
-          type = "date"
-          placeholder="Birthday"  
+          type="date"
           name="Birthday"
         >
       </mat-form-field>
     </form>
   </mat-card-content>
   <mat-card-actions>
-      <button
-        mat-raised-button
-        (click)="registerUser()"
-        color="primary"
-      >
-        Sign Up
-      </button>
+    <button
+      mat-raised-button
+      (click)="registerUser()"
+      color="primary"
+    >
+      Sign Up
+    </button>
   </mat-card-actions>
 </mat-card>
