Clean up project: remove unused services and update components for Task 6.3 compliance

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<div class="main-page">
-  <router-outlet></router-outlet>
-</div>
+<!-- Router outlet for navigation between components -->
+<router-outlet></router-outlet>
