--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -6,20 +6,20 @@
   <mat-card-content>
     <form>
       <mat-form-field>
-        <mat-label>Username</mat-label>
         <input
           matInput
           [(ngModel)]="userData.Username"
+          placeholder="Username"
           type="text"
           name="Username"
           required
         >
       </mat-form-field>
       <mat-form-field>
-        <mat-label>Password</mat-label>
         <input
           matInput
           [(ngModel)]="userData.Password"
+          placeholder="Password"
           type="password"
           name="Password"
           required
