--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,28 +1,23 @@
 <div class="main-page">
-    <h1>
-      Welcome to myFlix!
-    </h1>
-    <div class="button-container">
-      <button
-        mat-raised-button
-        (click)="openUserRegistrationDialog()"
-        color="primary"
-      >
-        Sign Up
-      </button>
-      <button
-        mat-raised-button
-        color="primary"
-        (click)="openUserLoginDialog()"
-      >
-        Login
-      </button>
-      <button
-        mat-raised-button
-        color="primary"
-        (click)="openMoviesDialog()"
-      >
-        All Movies
-      </button>
-    </div>
+  <h1>
+    Welcome to myFlix!
+  </h1>
+  <div class="button-container">
+    <button
+      mat-raised-button
+      (click)="openUserRegistrationDialog()"
+      color="primary"
+      class="action-button"
+    >
+      Sign Up
+    </button>
+    <button
+      mat-raised-button
+      (click)="openUserLoginDialog()"
+      color="primary"
+      class="action-button"
+    >
+      Login
+    </button>
   </div>
+</div>
