--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,23 +1,28 @@
 <div class="main-page">
-  <h1>
-    Welcome to myFlix!
-  </h1>
-  <div class="button-container">
+    <h1>
+      Welcome to myFlix!
+    </h1>
     <button
       mat-raised-button
       (click)="openUserRegistrationDialog()"
+      style="margin-right: 10px;"
       color="primary"
-      class="action-button"
     >
       Sign Up
     </button>
     <button
       mat-raised-button
-      (click)="openUserLoginDialog()"
       color="primary"
-      class="action-button"
+      (click)="openUserLoginDialog()"
+      style="margin-right: 10px;"
     >
       Login
     </button>
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="openMoviesDialog()"
+    >
+      All Movies
+    </button>
   </div>
-</div>
