--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -2,27 +2,27 @@
     <h1>
       Welcome to myFlix!
     </h1>
-    <button
-      mat-raised-button
-      (click)="openUserRegistrationDialog()"
-      style="margin-right: 10px;"
-      color="primary"
-    >
-      Sign Up
-    </button>
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="openUserLoginDialog()"
-      style="margin-right: 10px;"
-    >
-      Login
-    </button>
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="openMoviesDialog()"
-    >
-      All Movies
-    </button>
+    <div class="button-container" style="display: flex; gap: 20px; justify-content: center; margin-top: 30px;">
+      <button
+        mat-raised-button
+        (click)="openUserRegistrationDialog()"
+        color="primary"
+      >
+        Sign Up
+      </button>
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="openUserLoginDialog()"
+      >
+        Login
+      </button>
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="openMoviesDialog()"
+      >
+        All Movies
+      </button>
+    </div>
   </div>
